# PolyhedronFolder

./: .gitignore  CMakeLists.txt  README.md  flake.nix  packages.nix
Assets/ExamplePoly/: Antiprism6.poly  Cube.poly  Leonardo.poly  MartyrPrism.poly  Nuclear.poly  Prism7.poly  Star.poly  Stella.poly  Tetrahedron.poly  TruncatedIcosidodecahedron.poly
Assets/Saves/: CUBE.poly  ERROR.poly  FOOTBALL.poly  PYRAMID.poly
Shaders/: Frag_Lighting.frag  Frag_PosCol.frag  Vert_axes.vert
src/: GLUtils.cpp  GLUtils.hpp  ImGuiWidgets.cpp  ImGuiWidgets.h  InMemoryTokenizer.cpp  InMemoryTokenizer.h  Light.cpp  Light.h  MyApp.cpp  MyApp.h  ObjParser.cpp  ObjParser.h  ObjSaver.cpp  ObjSaver.h  ObjectWrapper.cpp  ObjectWrapper.h  ParametricSurface.h  PolyParser.cpp  PolyParser.h  PolySaver.cpp  PolySaver.h  PolyUtils.cpp  PolyUtils.h  Polyhedron.cpp  Polyhedron.h  ProgramBuilder.cpp  Transform.cpp  Transform.h  main.cpp
